executable(
  'fake_server',
  'fake-server.cpp',
  dependencies: [
    sdbusplus_dep,
    phosphor_logging_dep,
  ])

executable(
  'fake_server_bar',
  'fake-server-bar.cpp',
  dependencies: [
    sdbusplus_dep,
    phosphor_logging_dep,
  ])

executable(
  'fake_client',
  'fake-client.cpp',
  dependencies: [
    sdbusplus_dep,
    phosphor_logging_dep,
  ])
